@@ -14,6 +14,7 @@ Change log 1.1 (under development)
 * Major refactoring of the classloader structure and delegation.
 * Added two now methods to the Whitebox API, both called getAllFields. One takes an object as parameter and one takes a class. They return all instance/class fields of the object/class. 
 * Added a FieldDefaulter test listeners that set all instance field to their default value after each test method. This listener can be used to automatically set all instances to null after each test method instead of doing so manually in a tearDown method.
+* Added three new methods to the PowerMock API, reset(Object...mocks), reset(Class<?>...classMocks) and resetAll(). The methods can be used to reset instance mocks, class mocks or let PowerMock reset all mocks automatically.
 
 Change log 1.0 (released 2008-11-18)
 ------------------------------------
